# proativo

./: .cursorignore  .env  .env.example  .gitattributes  .gitignore  Dockerfile  MELHORIAS-IMPLEMENTADAS.md  README.md  TECHNICAL_ANALYSIS_REPORT.md  check_final_status.py  debug_equipment_id.py  debug_equipment_loading.py  docker-compose.yml  pyproject.toml  requirements.txt
Planejamento/: 1_planejamento.md  2_prd-proativo-sistema-apoio-decisao.md  3_architecture-proativo-sistema-apoio-decisao.md  6_macrotarefas-evolucao-llm-sql.md  Streamlit Capabilities and Component Architecture_.md  estratégia_branch_llm_sql_generation.md  macrotarefas-evolucao-llm-sql.md  planejamento-evolucao-llm-sql.md
docs/: arquitetura-scripts-vs-aplicacao.md  correcoes-scripts-populacao-banco.md  exemplo-verificacao-granular.md  funcionalidade-upload-arquivos.md  integracao-scripts-setup-database.md  integracao-vanna-ai-implementacao.md  pmm-2-analise-estrutura.md  pmm-2-diagrama-relacionamento.md  pmm-2-relacionamentos.md  pmm-2-tipos-dados-constraints.md  prototipagem-llm-langchain-langgraph.md  release-notes-verificacao-granular.md  resumo-implementacao-upload.md  scripts-setup-populacao-completa.md  solucao-comunicacao-containers-docker.md  solucao-duplicatas-equipamentos.md  solucao-erro-feedback-sistema.md  solucao-mapeamento-manutencao.md  vanna-gemini-only-implementation.md  vanna-troubleshooting-fixes.md  vanna-troubleshooting-guia.md  (+1 more)
notebooks/: langchain_sql_toolkit_gemini.ipynb  langgraph_sql_qa_agent.ipynb  llm_sql_generator_poc.ipynb  pyproject.toml
proativo/: .env  Dockerfile  (+10 more)
(+226 files in other folders)
